<resources>
    <string name="app_name">Android 1</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="minus">-</string>
    <string name="sum">+</string>
    <string name="equal">=</string>
    <string name="delete">del</string>
    <string name="cel">C</string>
    <string name="dote">.</string>
    <string name="procent">%</string>
    <string name="setFirstNum">Введите первое число</string>
    <string name="minusText">Какое число вычесть ?</string>
    <string name="plusText">Какое число прибавить ?</string>
    <string name="multiplyText">На какое число умножить ?</string>
    <string name="divideText">На какое число поделить ?</string>
    <string name="NightTheme">Темная тема</string>
    <string name="LightTheme">Светлая тема</string>
    <string name="ChooseTheme">Выберете тему:</string>
    <string name="settings">Настройки</string>
    <string name="Back">Вернуться</string>
    <string name="systemTheme">Системная</string>
</resources>