<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:rowCount="5"
    android:layout_gravity="center"
    android:padding="10dp"
    android:useDefaultMargins="true">
    <Button
        android:id="@+id/cel"
        android:text="@string/cel"
        android:textSize="@dimen/defoultTextSize"/>
    <Button
        android:id="@+id/delete"
        android:text="@string/delete"
        android:textSize="@dimen/defoultTextSize"/>
    <Button
        android:id="@+id/procent"
        android:text="@string/procent"
        android:textSize="@dimen/defoultTextSize"/>
    <Button
        android:id="@+id/multiply"
        android:text="@string/multiply"
        android:textSize="@dimen/defoultTextSize"/>
    <Button
        android:id="@+id/seven"
        android:text="@string/seven"
        android:textSize="@dimen/defoultTextSize"/>
    <Button
        android:id="@+id/eight"
        android:text="@string/eight"
        android:textSize="@dimen/defoultTextSize"/>
    <Button
        android:id="@+id/nine"
        android:text="@string/nine"
        android:textSize="@dimen/defoultTextSize"/>
    <Button
        android:id="@+id/divide"
        android:text="@string/divide"
        android:textSize="@dimen/defoultTextSize"/>
    <Button
        android:id="@+id/four"
        android:text="@string/four"
        android:textSize="@dimen/defoultTextSize"/>
    <Button
        android:id="@+id/five"
        android:text="@string/five"
        android:textSize="@dimen/defoultTextSize"/>
    <Button
        android:id="@+id/six"
        android:text="@string/six"
        android:textSize="@dimen/defoultTextSize"/>
    <Button
        android:id="@+id/minus"
        android:text="@string/minus"
        android:textSize="@dimen/defoultTextSize"/>
    <Button
        android:id="@+id/one"
        android:text="@string/one"
        android:textSize="@dimen/defoultTextSize"/>
    <Button
        android:id="@+id/two"
        android:text="@string/two"
        android:textSize="@dimen/defoultTextSize"/>
    <Button
        android:id="@+id/three"
        android:text="@string/three"
        android:textSize="@dimen/defoultTextSize"/>
    <Button
        android:id="@+id/sum"
        android:text="@string/sum"
        android:textSize="@dimen/defoultTextSize"/>
    <Button
        android:id="@+id/zero"
        android:text="@string/zero"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:textSize="@dimen/defoultTextSize"/>
    <Button
        android:id="@+id/dote"
        android:text="@string/dote"
        android:textSize="@dimen/defoultTextSize"/>
    <Button
        android:id="@+id/equal"
        android:text="@string/equal"
        android:layout_column="3"
        android:textSize="@dimen/defoultTextSize"/>
</GridLayout>