<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ChooseTheme"
        android:textColor="@color/white"
        android:textSize="@dimen/defoultTextSize"/>

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/systemTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/systemTheme"
            android:textColor="@color/white"
            android:textSize="@dimen/defoultTextSize"/>

        <RadioButton
            android:id="@+id/nightTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NightTheme"
            android:textColor="@color/white"
            android:textSize="@dimen/defoultTextSize"/>

        <RadioButton
            android:id="@+id/lightTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LightTheme"
            android:textColor="@color/white"
            android:textSize="@dimen/defoultTextSize"/>
    </RadioGroup>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:textColor="@color/white"
        android:textSize="@dimen/defoultTextSize"/>

</androidx.appcompat.widget.LinearLayoutCompat>